forbedrer kodeliste og kodeverk uthenting